syntax = "proto3";

service Expert {
  rpc Execute (Input) returns (Output) {}
}

message Input {
  int32 block_num = 1;
  bytes activated_experts = 2;
  bytes data = 3;
}

message Output {
  bytes data = 1;
}
